# AI_Tutor

./: .gitignore  AI_Tutor_PRD.docx  BACKEND_SECURITY_IMPROVEMENTS.md  CLAUDE.md  CODEBASE_DOCUMENTATION.md  DEVELOPER_GUIDE.md  README.md  WORKFLOW.md  output.txt  output_create.txt  output_error.txt  output_no_emoji.txt  package.json  reset_db.py  seed_runner.py  setup_project.py  tutor.db
backend/: .env.example  .gitignore  Makefile  api.py  database.py  ingest.py  pyproject.toml  requirements.txt  reset_seed_db.py  schemas.py  seed_db.py  setup.py  tutor.db
backend/app/: __init__.py
backend/app/schemas/: __init__.py
backend/docs/: BACKEND_DOCUMENTATION.md  EURIAI_MODEL_FRAMEWORK.md  EXPLANATION.md  TROUBLESHOOTING.md
backend/models/: __init__.py  board.py  chapter.py  flashcard.py  grade.py  language.py  language_level.py  otp_code.py  question.py  quiz.py  roadmap.py  roadmap_quiz_map.py  roadmap_step.py  scorecard.py  student_game_state.py  student_language_selection.py  student_progress.py  students.py  subchapter.py  subject.py  syllabus.py  syllabus_language_option.py  syllabus_subject.py  textbook.py  topic.py
backend/routes/: chapters_router.py  chat_router.py  flashcards_router.py  meta_router.py  roadmap_router.py  students_router.py  subchapters_router.py  subjects_router.py  syllabus_router.py
backend/services/: flashcard_service.py  progress_service.py
backend/src/tutor/: enhanced_interface.py  framework.py  interface.py  langchain_wrapper.py  langgraph_tutor.py  memory_service.py  rag_pipeline.py  registry.py  tracing.py
backend/src/utils/: euriai_embeddings.py  hf_embeddings.py
backend/utils/: __init__.py  auth.py  dependencies.py  security.py
frontend/: package.json
frontend/src/: App.js  AppWithRouter.jsx  FlashcardView.js  SoundManager.js  SyllabusContext.js  SyllabusUploader.js  ThemeContext.js  api.js  authStorage.js  glass.css  index.js  meta.js  styles.js  syllabusParser.js  themes.js
frontend/src/api/: index.js  queries.js  queryClient.js
frontend/src/components/: AnimatedBackground.js  ConfettiCelebration.js  DailyTip.js  LanguageToggle.js  Login.js  PageTransition.js  Profile.js  Register.js  Sidebar.js  StatCard.js  SubjectCard.js
frontend/src/design/: GlobalStyles.js  designSystem.js  index.js  tokens.js
frontend/src/hooks/: index.js  useApi.js  useAuth.js  useChat.js  useCurriculum.js  useFlashcards.js  (+2 more)
(+51 files in other folders)
